ProyectoFinal/force-app/main/default/objects/ProjectLineItem__c.object
<CustomObject>
    <fields>
        <fullName>AmountxRole__c</fullName>
        <label>AmountxRole</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EstimatedAmountXRole__c</fullName>
        <label>EstimatedAmountXRole</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EstimatedHours__c</fullName>
        <label>EstimatedHours</label>
        <summarizedField>ProjectResource__c.EstimatedHours__c</summarizedField>
        <summaryForeignKey>ProjectResource__c.ProjectLineItem__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipName>ProjectLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>QuantityHours__c</fullName>
        <label>QuantityHours</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Role</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TotalRegisterHoursxRole__c</fullName>
        <label>TotalRegisterHoursxRole</label>
        <summarizedField>ProjectResource__c.TotalRegisterHours__c</summarizedField>
        <summaryForeignKey>ProjectResource__c.ProjectLineItem__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Project Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Project__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PLI-{0000}</displayFormat>
        <label>ProjectLineItem Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>