ProyectoFinal/force-app/main/default/objects/ProjectLineItem__c/fields/Estimated_Hours__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Hours__c</fullName>
    <label>Estimated Hours</label>
    <summarizedField>ProjectResource__c.Estimated_Hours__c</summarizedField>
    <summaryForeignKey>ProjectResource__c.ProjectLineItem__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>